--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,34 @@
 amqp==5.1.1
-anyascii==0.3.1
-asgiref==3.5.2
+anyascii==0.3.2
+asgiref==3.6.0
 async-timeout==4.0.2
-beautifulsoup4==4.11.1
+autopep8==2.0.2
+beautifulsoup4==4.11.2
 billiard==3.6.4.0
-boto3==1.24.85
-botocore==1.27.85
+boto3==1.26.112
+botocore==1.29.112
 celery==5.2.7
-certifi==2022.9.24
-charset-normalizer==2.1.1
+certifi==2022.12.7
+charset-normalizer==3.1.0
 click==8.1.3
 click-didyoumean==0.3.0
 click-plugins==1.1.1
 click-repl==0.2.0
-Deprecated==1.2.13
-Django==4.1.2
-django-colorfield==0.7.2
+colorama==0.4.6
+Django==4.1.8
+django-ckeditor==6.5.1
+django-colorfield==0.8.0
 django-filter==22.1
+django-js-asset==2.0.0
 django-modelcluster==6.0
+django-nested-admin==4.0.2
 django-permissionedforms==0.1
-django-storages==1.13.1
-django-taggit==3.0.0
-django-tinymce==3.5.0
-django-treebeard==4.5.1
+django-storages==1.13.2
+django-taggit==3.1.0
+django-tinymce==3.6.1
+django-treebeard==4.6.1
 djangorestframework==3.14.0
+djhtml==3.0.6
 draftjs-exporter==2.1.7
 et-xmlfile==1.1.0
 gunicorn==20.1.0
@@ -32,31 +37,30 @@ idna==3.4
 jmespath==1.0.1
 kombu==5.2.4
 l18n==2021.3
-openpyxl==3.0.10
-packaging==21.3
-Pillow==9.2.0
-prompt-toolkit==3.0.31
-psycopg2-binary==2.9.3
-pyparsing==3.0.9
+openpyxl==3.1.2
+Pillow==9.5.0
+prompt-toolkit==3.0.38
+psycopg2-binary==2.9.6
+pycodestyle==2.10.0
+pypng==0.20220715.0
 python-dateutil==2.8.2
-python-decouple==3.6
-pytz==2022.4
-redis==4.3.4
-requests==2.28.1
+python-decouple==3.8
+python-monkey-business==1.0.0
+pytz==2023.3
+qrcode==7.4.2
+redis==4.5.4
+requests==2.28.2
 s3transfer==0.6.0
 six==1.16.0
-soupsieve==2.3.2.post1
+soupsieve==2.4
 sqlparse==0.4.3
-stripe==4.2.0
-tablib==3.2.1
+stripe==5.4.0
 telepath==0.3
-urllib3==1.26.12
+typing_extensions==4.5.0
+tzdata==2023.3
+urllib3==1.26.15
 vine==5.0.0
-wagtail==4.0.2
-wcwidth==0.2.5
+wagtail==4.2.2
+wcwidth==0.2.6
 webencodings==0.5.1
 Willow==1.4.1
-wrapt==1.14.1
-xlrd==2.0.1
-XlsxWriter==3.0.3
-xlwt==1.3.0
