--- a/.env-sample
+++ b/.env-sample
@@ -2,7 +2,7 @@ TEST_STRIPE_PUBLIC_KEY=
 TEST_STRIPE_SECRET_KEY=
 STRIPE_PUBLIC_KEY=
 STRIPE_SECRET_KEY=
-STRIPE_ENDPOINT=
+STRIPE_ENDPOINT_SECRET=
 SITE_EMAIL=
 SECRET_KEY=
 EMAIL_HOST=
