--- a/nginx/custom.conf
+++ b/nginx/custom.conf
@@ -36,13 +36,13 @@ upstream django {
 
 server {
 
-    set $my_host "allmediterranean.com";
+    set $my_host "www.quizelements.com";
     if ($host ~ "\d+\.\d+\.\d+\.\d+") {
-        set $my_host "allmediterranean.com";
+        set $my_host "www.quizelements.com";
     }
 
     listen 80;
-    server_name allmediterranean.com;
+    server_name www.quizelements.com;
     return 301 https://$my_host$request_uri;
 
 
@@ -52,7 +52,7 @@ server {
 
 server {
     listen 443 ssl http2;
-    server_name allmediterranean.com;
+    server_name www.quizelements.com;
     ssl_certificate /app/certs/ssl_certificate.crt;
     ssl_certificate_key /app/certs/ssl_certificate.key;
     location / {
