--- a/nginx/custom.conf
+++ b/nginx/custom.conf
@@ -53,8 +53,8 @@ server {
 server {
     listen 443 ssl http2;
     server_name www.quizelements.com;
-    ssl_certificate /certs/ssl_certificate.crt;
-    ssl_certificate_key /certs/ssl_certificate.key;
+    ssl_certificate /app/certs/ssl_certificate.crt;
+    ssl_certificate_key /app/certs/ssl_certificate.key;
     location / {
         proxy_pass http://django/;
         proxy_set_header Host $my_host;
