--- a/nginx/custom.conf
+++ b/nginx/custom.conf
@@ -36,6 +36,13 @@ upstream django {
 
 server {
 
+    set $my_host "www.quizelements.com";
+    if ($host ~ "\d+\.\d+\.\d+\.\d+") {
+        set $my_host "www.quizelements.com";
+    }
+
+    listen 80;
+    server_name www.quizelements.com;
     location / {
         proxy_pass http://django/;
         proxy_set_header Host $my_host;
@@ -47,12 +54,6 @@ server {
         }
     }
 
-    listen 80;
-    server_name www.quizelements.com;
-
-
 
 }
-
-
 
