--- a/nginx/custom.conf
+++ b/nginx/custom.conf
@@ -45,6 +45,16 @@ server {
     server_name quizelements.com;
     return 301 https://$my_host$request_uri;
 
+
+
+}
+
+
+server {
+    listen 443 ssl http2;
+    server_name quizelements.com;
+    ssl_certificate /app/certs/ssl_certificate.crt;
+    ssl_certificate_key /app/certs/ssl_certificate.key;
     location / {
         proxy_pass http://django/;
         proxy_set_header Host $my_host;
@@ -55,8 +65,5 @@ server {
         if ($limit_bots = 1) { return  301 $scheme://www.google.com/;
         }
     }
-
 }
-
-
-
+  
