--- a/nginx/custom.conf
+++ b/nginx/custom.conf
@@ -36,25 +36,13 @@ upstream django {
 
 server {
 
-    set $my_host "quizelements.com";
+    set $my_host "www.quizelements.com";
     if ($host ~ "\d+\.\d+\.\d+\.\d+") {
-        set $my_host "quizelements.com";
+        set $my_host "www.quizelements.com";
     }
 
     listen 80;
-    server_name quizelements.com;
-    return 301 https://$my_host$request_uri;
-
-
-
-}
-
-
-server {
-    listen 443 ssl http2;
-    server_name quizelements.com;
-    ssl_certificate /app/certs/ssl_certificate.crt;
-    ssl_certificate_key /app/certs/ssl_certificate.key;
+    server_name www.quizelements.com;
     location / {
         proxy_pass http://django/;
         proxy_set_header Host $my_host;
@@ -65,5 +53,25 @@ server {
         if ($limit_bots = 1) { return  301 $scheme://www.google.com/;
         }
     }
+
+
 }
+
+
+# server {
+#     listen 443 ssl http2;
+#     server_name quizelements.com;
+#     ssl_certificate /app/certs/ssl_certificate.crt;
+#     ssl_certificate_key /app/certs/ssl_certificate.key;
+#     location / {
+#         proxy_pass http://django/;
+#         proxy_set_header Host $my_host;
+#         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+#         proxy_set_header X-Real-IP $remote_addr;
+#         if ($http_user_agent = "") { return  301 $scheme://www.google.com/; 
+#         }
+#         if ($limit_bots = 1) { return  301 $scheme://www.google.com/;
+#         }
+#     }
+# }
   
