--- a/Pipfile
+++ b/Pipfile
@@ -4,21 +4,72 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-django-tinymce = "*"
-pillow = "*"
-python-decouple = "*"
-celery = "*"
-redis = "*"
-psycopg2-binary = "*"
-django-storages = "*"
-boto3 = "*"
-gunicorn = "*"
-stripe = "*"
-django-colorfield = "*"
-wagtail = "*"
-django = "*"
-qrcode = "*"
-django-ckeditor = "*"
+django-tinymce = "==3.6.1"
+pillow = "==9.5.0"
+python-decouple = "==3.8"
+celery = "==5.2.7"
+redis = "==4.5.4"
+psycopg2-binary = "==2.9.6"
+django-storages = "==1.13.2"
+boto3 = "==1.26.112"
+gunicorn = "==20.1.0"
+stripe = "==5.4.0"
+django-colorfield = "==0.8.0"
+wagtail = "==4.2.2"
+qrcode = "==7.4.2"
+django-ckeditor = "==6.5.1"
+django = "==4.1.8"
+amqp = "==5.1.1"
+anyascii = "==0.3.2"
+asgiref = "==3.6.0"
+async-timeout = "==4.0.2"
+autopep8 = "==2.0.2"
+beautifulsoup4 = "==4.11.2"
+billiard = "==3.6.4.0"
+botocore = "==1.29.112"
+certifi = "==2022.12.7"
+charset-normalizer = "==3.1.0"
+click = "==8.1.3"
+click-didyoumean = "==0.3.0"
+click-plugins = "==1.1.1"
+click-repl = "==0.2.0"
+colorama = "==0.4.6"
+django-filter = "==22.1"
+django-js-asset = "==2.0.0"
+django-modelcluster = "==6.0"
+django-nested-admin = "==4.0.2"
+django-permissionedforms = "==0.1"
+django-taggit = "==3.1.0"
+django-treebeard = "==4.6.1"
+djangorestframework = "==3.14.0"
+djhtml = "==3.0.6"
+draftjs-exporter = "==2.1.7"
+et-xmlfile = "==1.1.0"
+html5lib = "==1.1"
+idna = "==3.4"
+jmespath = "==1.0.1"
+kombu = "==5.2.4"
+l18n = "==2021.3"
+openpyxl = "==3.1.2"
+prompt-toolkit = "==3.0.38"
+pycodestyle = "==2.10.0"
+pypng = "==0.20220715.0"
+python-dateutil = "==2.8.2"
+python-monkey-business = "==1.0.0"
+pytz = "==2023.3"
+requests = "==2.28.2"
+s3transfer = "==0.6.0"
+six = "==1.16.0"
+soupsieve = "==2.4"
+sqlparse = "==0.4.3"
+telepath = "==0.3"
+typing-extensions = "==4.5.0"
+tzdata = "==2023.3"
+urllib3 = "==1.26.15"
+vine = "==5.0.0"
+wcwidth = "==0.2.6"
+webencodings = "==0.5.1"
+willow = "==1.4.1"
 
 [dev-packages]
 autopep8 = "*"
