--- a/Pipfile
+++ b/Pipfile
@@ -14,7 +14,6 @@ django-storages = "==1.13.2"
 boto3 = "==1.26.112"
 gunicorn = "==20.1.0"
 stripe = "==5.4.0"
-django-colorfield = "==0.8.0"
 wagtail = "==4.2.2"
 qrcode = "==7.4.2"
 django-ckeditor = "==6.5.1"
@@ -70,6 +69,8 @@ vine = "==5.0.0"
 wcwidth = "==0.2.6"
 webencodings = "==0.5.1"
 willow = "==1.4.1"
+django-colorfield = "*"
+cryptography = "*"
 
 [dev-packages]
 autopep8 = "*"
